Responsive fix height and firefox custom scrollbar.

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -86,6 +86,7 @@ html, body {
   font-family: 'Roboto', sans-serif;
   text-align: center;
   background-image: url('Assets/images/background.jpg');
+  scrollbar-color: rgb(255, 217, 0) rgba(0, 0, 0, 0);
 }
 
 footer {
@@ -349,25 +350,25 @@ main {
 
 @media only screen and (max-height: 1200px) {
   .main-content {
-    height: 600px;
+    height: 650px;
   }
 }
 
 @media only screen and (min-height: 801px) and (max-height: 1199px) {
   .main-content {
-    height: 500px;
+    height: 550px;
   }
 }
 
 @media only screen and (min-height: 701px) and (max-height: 800px) {
   .main-content {
-    height: 400px;
+    height: 450px;
   }
 }
 
 @media only screen and (min-height: 501px) and (max-height: 700px) {
   .main-content {
-    height: 300px;
+    height: 350px;
   }
 }
 
